--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <li><a href="/kali-metasploitable-training/training1_subject.pdf">Training 1 Setup the lab, first exploit</a></li>
           <li><a href="/docker-slides/">Docker introduction</a></li>
           <li><a href="/buffer-overflow-slides/">Buffer overflow</a></li>
+          <li><a href="/buffer-overflow-training/training2_subject.pdf">Buffer overflow training</a></li>
         </ol>
 
       </section>
